--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
 /* add code here to make your image 300px square */
+img {
+    width: 300px;
+}
+img {height: 300px;}
 
 /* add code here to change the color and font family of your name/title */
+h1{
+    color:blue;
+    text-align: center;
+    font-family: Georgia,;
+}
 
 /* Bonus: change the color of your list elements */
+li{
+    color: forestgreen;
+}
